selfhost/test/typechecker/assignment/indexing_error_type_mismatch.2.out
Error at %FILE_NAME%:2:13
Type mismatch
  |  arr[0] = arr[1]
                 ^
Expected: Int
but instead found: Int?
